# AI-Native

./: .dockerignore  .gitignore  .mcp-project.json.example  AGENTS.md  AGENTS.md.bak.20260630T053411Z  AGENTS.md.bak.20260711T082129Z  AGENTS.md.bak.20260711T084009Z  AGENTS.md.bak.20260711T084146Z  AGENTS.md.bak.20260714T023232Z  AI-Native开发平台设计规范.md  AI-员工工厂设计规范.md  AI_DECISION_IMPLEMENTATION.md  AI开发教程.md  CLAUDE.md  CLAUDE.md.bak.20260630T053455Z  HERMES.md  HERMES.md.bak.20260630T053455Z  LICENSE  PROJECT.md  README.md  bug.md  install.sh  lark-cli.md  marketing-slogan-prompt.md  nanjing_jiahua_feature.md  rule-porter.md  skills-lock.json  social-promo-slogans.md  system.md  test.json  任务.md  全域通项目使用手册.md  全域通项目使用手册生成提示词-完整版.md  功能分割设计.md  功能咨询记录.md  对话test  工作月报.md  工作流.md  提示词位置信息.md  方案记录.txt
web-admin/api/: .env.example  .gitignore  agent_loop.py  agent_loop.py.bak  agent_orchestrator.py  ai_decision.py  auth.py  config.py  conversation_manager.py  deps.py  dynamic_mcp.py  employee_store.py  employee_store_pg.py  external_agent_service.py  external_mcp_store.py  external_mcp_store_pg.py  feedback_service.py  init_admin.py  llm_provider_service.py  observability.py  project_chat_store.py  project_chat_store_pg.py  project_store.py  project_store_pg.py  prompt_history_store_pg.py  pyproject.toml  redis_client.py  role_permissions.py  role_store.py  role_store_pg.py  server.py  stores.py  stores_pg.py  system-policy.md  system_config_store.py  system_config_store_pg.py  test_metrics.py  test_performance.py  test_unit.py  tool_executor.py  (+3 more)
web-admin/api/core/: auth.py  config.py  data_scope.py  db_migrations.py  deps.py  observability.py  ownership.py  redis_client.py  role_permissions.py  server.py
web-admin/api/data/: usage.db
(+892 files in other folders)
