[project]
name = "web-admin-api"
version = "0.1.0"
description = "AI 员工工厂 — API 网关"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "fastmcp>=3.0",
    "lark-oapi>=1.5.5",
    "psycopg[binary]>=3.2",
    "requests>=2.31",
    "redis[hiredis]>=5.0.0",
    "structlog>=23.1.0",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
