[package]
name = "ai-employee-factory-desktop"
version = "0.1.0"
description = "AI 员工工厂桌面端"
authors = ["AI Employee Factory"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
libc = "0.2"
portable-pty = "0.8"
reqwest = { version = "0.13.4", features = ["blocking", "json", "multipart"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
